--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
 <mat-toolbar color="primary">
   <span>
-    <a routerLink="/">Messages</a>
+    <a routerLink="/">Posts</a>
   </span>
+  <span class="spacer"></span>
   <ul>
     <li>
-      <a routerLink="/create">Add a Post</a>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent"
+        >Add a Post</a
+      >
     </li>
   </ul>
 </mat-toolbar>
