--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,31 +1,31 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
         type="text"
-        name="title"
-        [ngModel]="post?.title"
-        required
-        minlength="3"
+        formControlName="title"
         placeholder="Post Title"
-        #postTitle="ngModel"
       />
-      <mat-error *ngIf="postTitle.invalid">Must enter a Title</mat-error>
+      <mat-error *ngIf="form.get('title').invalid"
+        >Must enter a Title</mat-error
+      >
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">
+        Pick Image
+      </button>
+      <input type="file" #filePicker />
+    </div>
     <mat-form-field>
       <textarea
         matInput
         rows="6"
-        name="content"
-        [ngModel]="post?.content"
-        required
-        minlength="25"
+        formControlName="content"
         placeholder="Post Content"
-        #postContent="ngModel"
       ></textarea>
-      <mat-error *ngIf="postContent.invalid"
+      <mat-error *ngIf="form.get('content').invalid"
         >Must have value with a minimum length of 25 characters</mat-error
       >
     </mat-form-field>
