--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -18,8 +18,17 @@
       </button>
       <input type="file" #filePicker (change)="onImagePicked($event)" />
     </div>
-    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+    <div
+      class="image-preview"
+      *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid"
+    >
       <img [src]="imagePreview" [alt]="form.value.title" />
+    </div>
+    <div
+      class="error-message"
+      *ngIf="imagePreview !== '' && imagePreview && form.get('image').invalid"
+    >
+      Invalid file type uploaded; please select a different file.
     </div>
     <mat-form-field>
       <textarea
