--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,5 +9,10 @@
         >Add a Post</a
       >
     </li>
+    <li>
+      <a mat-button routerLink="/login" routerLinkActive="mat-accent"
+        >Login</a
+      >
+    </li>
   </ul>
 </mat-toolbar>
